--- a/views/views.xml
+++ b/views/views.xml
@@ -1,10 +1,10 @@
 <odoo>
   <data>
     <!-- explicit list view definition -->
-    <!--
-    <record model="ir.ui.view" id="my_module.list">
-      <field name="name">my_module list</field>
-      <field name="model">my_module.my_module</field>
+    
+    <record model="ir.ui.view" id="q_note.list">
+      <field name="name">q_note list</field>
+      <field name="model">q_note</field>
       <field name="arch" type="xml">
         <tree>
           <field name="name"/>
@@ -13,22 +13,22 @@
         </tree>
       </field>
     </record>
-    -->
+    
 
     <!-- actions opening views on models -->
-    <!--
-    <record model="ir.actions.act_window" id="my_module.action_window">
-      <field name="name">my_module window</field>
-      <field name="res_model">my_module.my_module</field>
+    
+    <record model="ir.actions.act_window" id="q_note.action_window">
+      <field name="name">q_note window</field>
+      <field name="res_model">q_note</field>
       <field name="view_mode">tree,form</field>
     </record>
-    -->
+    
 
     <!-- server action to the one above -->
-    <!--
-    <record model="ir.actions.server" id="my_module.action_server">
-      <field name="name">my_module server</field>
-      <field name="model_id" ref="model_my_module_my_module"/>
+    
+    <record model="ir.actions.server" id="q_note.action_server">
+      <field name="name">q_note server</field>
+      <field name="model_id" ref="model_q_note"/>
       <field name="state">code</field>
       <field name="code">
         action = {
@@ -38,23 +38,23 @@
         }
       </field>
     </record>
-    -->
+    
 
     <!-- Top menu item -->
-    <!--
-    <menuitem name="my_module" id="my_module.menu_root"/>
-    -->
+    
+    <menuitem name="q_note" id="q_note.menu_root"/>
+    
     <!-- menu categories -->
-    <!--
-    <menuitem name="Menu 1" id="my_module.menu_1" parent="my_module.menu_root"/>
-    <menuitem name="Menu 2" id="my_module.menu_2" parent="my_module.menu_root"/>
-    -->
+    
+    <menuitem name="Menu 1" id="q_note.menu_1" parent="q_note.menu_root"/>
+    <menuitem name="Menu 2" id="q_note.menu_2" parent="q_note.menu_root"/>
+    
     <!-- actions -->
-    <!--
-    <menuitem name="List" id="my_module.menu_1_list" parent="my_module.menu_1"
-              action="my_module.action_window"/>
-    <menuitem name="Server to list" id="my_module" parent="my_module.menu_2"
-              action="my_module.action_server"/>
-    -->
+    
+    <menuitem name="List" id="q_note.menu_1_list" parent="q_note.menu_1"
+              action="q_note.action_window"/>
+    <menuitem name="Server to list" id="q_note" parent="q_note.menu_2"
+              action="q_note.action_server"/>
+    
   </data>
 </odoo>
