--- a/views/views.xml
+++ b/views/views.xml
@@ -14,6 +14,17 @@
       </field>
     </record>
     
+    <record id="q_note_form" model="ir.ui.view">
+      <field name="name">q_note_form</field>
+      <field name="model">q_note</field>
+      <field name="arch" type="xml">
+        <form string="Q Meldung">
+          <header>
+            <field name="state" widget="statusbar" statusbar_visible="draft,created,confirmed,done,cancelled"/>
+          </header>
+        </form>
+    </record>
+
 
     <!-- actions opening views on models -->
     
